<resources>
    <string name="app_name">WatchReadPlay</string>
    <string name="finished">Finished</string>
    <string name="wishlist">Wishlist</string>
    <string name="all">All</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="reset">Reset</string>
    <string name="message">Nothing here :(\nClick the button\nto add new item!</string>

    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="not_account">Don\'t have an account?</string>
    <string name="different_passwords">Passwords are not the same!</string>
    <string name="empty_password">Password cannot be empty!</string>
    <string name="empty_email">Email cannot be empty!</string>
    <string name="account_created">Account created successfully! </string>

    <string name="movies">Movies</string>
    <string name="series">Series</string>
    <string name="books">Books</string>
    <string name="games">Games</string>

    <string name="movie">Movie</string>
    <string name="serie">Serie</string>
    <string name="book">Book</string>
    <string name="game">Game</string>

    <string name="type">Type</string>
    <string name="title">Title</string>
    <string name="title_req">Title*</string>
    <string name="original_title">Original title</string>
    <string name="release_year">Year of release</string>
    <string name="author">Author/Director/Studio</string>
    <string name="completion_date">Completion date</string>

    <string name="add">Add</string>
    <string name="edit_date">Edit date</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="change_type">Change type</string>

    <string name="title_delete">Delete this item?</string>
    <string name="title_logout">Logging out</string>
    <string name="accept">Accept</string>
    <string name="supporting_text_delete">Are you sure you want to remove this item? Item once deleted cannot be restored!</string>
    <string name="supporting_text_logout">Are you sure you want to logout?</string>
    <string name="title_is_empty">You cannot add untitled item!</string>
    <string name="title_is_empty_search">Unable to search for untitled items! </string>
</resources>