<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainFragment">

    <com.example.watchreadplay.RecursiveRadioGroup
        android:id="@+id/radio_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="clip_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/radio_finished"
                style="@style/RadioButtonStyle"
                android:text="@string/finished"
                android:checked="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radio_wishlist"
                style="@style/RadioButtonStyle"
                android:text="@string/wishlist"
                app:layout_constraintEnd_toStartOf="@+id/radio_all"
                app:layout_constraintStart_toEndOf="@+id/radio_finished"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/radio_all"
                style="@style/RadioButtonStyle"
                android:text="@string/all"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>

    </com.example.watchreadplay.RecursiveRadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>